--- a/assets/css/components/sidebar.css
+++ b/assets/css/components/sidebar.css
@@ -90,6 +90,24 @@ body.sidebar-collapse .sidebar-menu {
  * Conversations entries
  */
 
+/**
+add left border
+.main-sidebar .memberships-list .conversation_memberhsip.has-unread-msg::before {
+	border: 2px white solid;
+  border-radius: 2px 0px 0px 2px;
+  content: " ";
+  position: absolute;
+  background-color: white;
+  height: 100%;
+  left: 1%;
+}
+*/
+
+.main-sidebar .memberships-list .conversation_memberhsip.has-unread-msg {
+	background-color: #00a65a30;
+}
+  
+
 .main-sidebar .memberships-list .conversation_memberhsip a {
 	padding: 5px 5px 5px 15px;
 }
