--- a/assets/css/components/calls/window.css
+++ b/assets/css/components/calls/window.css
@@ -58,8 +58,12 @@
 .call-window .videos-area {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
+	max-width: 100%;
 }
 
 .call-window .videos-area video {
-
+	flex-shrink: 1;
+	flex: 1;
+	max-height: 100%;
 }
