--- a/assets/css/components/calls/window.css
+++ b/assets/css/components/calls/window.css
@@ -55,6 +55,10 @@
 	margin: 0px 5px;
 }
 
+.call-window .members-area span.ready {
+	color: rgb(1, 218, 1);
+}
+
 .call-window .videos-area {
 	display: flex;
 	flex-direction: row;
