--- a/assets/css/components/calls/window.css
+++ b/assets/css/components/calls/window.css
@@ -107,3 +107,23 @@
 .call-window .window-bottom div.hang-up-button {
 	color: #dd4b39;
 }
+
+/**
+ * Responsive mode
+ */
+ @media screen and (max-width: 730px) {
+
+	#callsTarget {
+		z-index: 1030;
+	}
+
+	.call-window {
+		width: 100%;
+		position: fixed;
+		left: 0px;
+	}
+
+	.call-window .videos-area {
+		flex-direction: column;
+	}
+ }
