--- a/assets/css/components/calls/window.css
+++ b/assets/css/components/calls/window.css
@@ -82,8 +82,8 @@
 }
 
 .call-window .videos-area .video video {
-	max-width: 100%;
-	flex: 1;
+	width: 100%;
+	height: 100%;
 }
 
 .call-window .window-bottom {
