Start to anchor video calls

--- a/assets/css/common/global.css
+++ b/assets/css/common/global.css
@@ -37,6 +37,11 @@ a, .cursor-pointer {
     padding-bottom: 0px;
 }
 
+#pageTarget {
+    display: flex;
+    flex-direction: column;
+}
+
 /**
  * Adapt menu bar to small screens
  */
