--- a/assets/css/components/sidebar.css
+++ b/assets/css/components/sidebar.css
@@ -86,6 +86,24 @@ body.sidebar-collapse .sidebar-menu {
 }
 
 
+body.sidebar-collapse .main-sidebar .memberships-list .subinfo {
+	display: none;
+}
+
+body.sidebar-collapse .main-sidebar .memberships-list li:hover .subinfo {
+	display: block;
+	background: #2c3b41;
+	position: absolute;
+	width: 180px;
+	left: 50px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border-bottom-right-radius: 4px;
+	margin: 7px -3px;
+	padding-left: 20px;
+}
+
+
 /**
  * Conversations entries
  */
@@ -120,23 +138,27 @@ add left border
 	font-size: 80%;
 }
 
-
-body.sidebar-collapse .main-sidebar .memberships-list .subinfo {
+.main-sidebar .conversation_memberhsip.with-call .subinfo {
 	display: none;
 }
 
-body.sidebar-collapse .main-sidebar .memberships-list li:hover .subinfo {
-	display: block;
-	background: #2c3b41;
-	position: absolute;
-	width: 180px;
-	left: 50px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	border-bottom-right-radius: 4px;
-	margin: 7px -3px;
-	padding-left: 20px;
+
+
+.main-sidebar .call_notice {
+	background-color: #db8b0b82;
+	margin-bottom: 5px;
 }
+
+.main-sidebar .call_notice a {
+	padding-top: 0px;
+	padding-bottom: 0px;
+}
+
+.main-sidebar .call_notice a:hover {
+	background-color: #db8b0b82 !important;
+}
+
+
 
 /**
  * Conversations
