Remove background from call window bottom

--- a/assets/css/components/calls/window.css
+++ b/assets/css/components/calls/window.css
@@ -112,6 +112,7 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	background-color: black;
 }
 
 .call-window .window-bottom div {
