Fix an issue in responsive mode

--- a/assets/css/components/calls/window.css
+++ b/assets/css/components/calls/window.css
@@ -189,6 +189,10 @@
 		left: 0px;
 	}
 
+	.call-window.embedded {
+		height: unset;
+	}
+
 	.call-window .videos-area {
 		flex-direction: column;
 	}
