--- a/assets/css/components/calls/window.css
+++ b/assets/css/components/calls/window.css
@@ -131,6 +131,14 @@
 }
 
 .call-window .videos-area .video video {
+	border: 2px transparent solid;
+}
+
+.call-window .videos-area .video video.talking {
+	border: 2px green solid;
+}
+
+.call-window .videos-area .video video {
 	width: 100%;
 	height: 100%;
 }
