--- a/assets/templates/components/mediaPlayer.html
+++ b/assets/templates/components/mediaPlayer.html
@@ -1,7 +1,7 @@
-<!-- Audio player template -->
+<!-- media player template -->
 
 <style>
-.audio-player {
+.media-player {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -14,24 +14,29 @@
     align-items: center;
 }
 
-.audio-player div {
+.media-player div {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.audio-player .close {
+.media-player .close {
     color: white;
     margin: 20px;
     opacity: 1;
     text-shadow: unset;
     font-weight: unset;
 }
+
+.media-target * {
+    max-width: 100%;
+    max-height: 100%;
+}
 </style>
 
-<div class="audio-player">
+<div class="media-player">
     <div>
-        <audio controls></audio>
+        <div class="media-target"></div>
         
         <p class="close a">tr("Close")</p>
     </div>
