Update conversations tab

--- a/assets/zip/personnal-data-export-navigator/assets/css/main.css
+++ b/assets/zip/personnal-data-export-navigator/assets/css/main.css
@@ -119,6 +119,10 @@ h1 {
 	margin-top: 10px;
 }
 
+#conversations-target .conversation .conversation-logo {
+	max-height: 200px;
+}
+
 #conversations-target .conversation .conversation-metadata {
 	font-size: 90%;
 	font-style: italic;
