--- a/assets/templates/pages/groups/sections/GroupTabs.html
+++ b/assets/templates/pages/groups/sections/GroupTabs.html
@@ -1,7 +1,7 @@
 <!-- Group tabs section -->
-<div class="row group-page">
-    <div class="col-md-6">
 
+<div class="row group-page tabs-container">
+    <div class="col-md-6">
         <div class="nav-tabs-custom">
             <ul class="nav nav-tabs">
               <li v-bind:class="activePage == 'posts' ? 'active': ''"><a @click="openPage('posts')">tr("Posts")</a></li>
