--- a/assets/css/pages/groups/sections/tabs.css
+++ b/assets/css/pages/groups/sections/tabs.css
@@ -21,5 +21,5 @@
 
 .group-page.tabs-container .nav-tabs-custom > .nav-tabs > li.active {
     border-bottom: 3px solid transparent;
-    border-top: none;
+    border-top: 3px solid transparent;
 }
