Improve the way group conversations are shown in sidebar

--- a/assets/css/components/sidebar.css
+++ b/assets/css/components/sidebar.css
@@ -132,6 +132,10 @@ add left border
 }
 */
 
+.main-sidebar .memberships-list .conversation_memberhsip.group-conversation {
+	padding-left: 20px;
+}
+
 .main-sidebar .memberships-list .conversation_memberhsip.has-unread-msg {
 	background-color: #00a65a30;
 }
