--- a/assets/css/components/sidebar.css
+++ b/assets/css/components/sidebar.css
@@ -132,8 +132,8 @@ add left border
 }
 */
 
-.main-sidebar .memberships-list .conversation_memberhsip.group-conversation {
-	padding-left: 20px;
+.main-sidebar .memberships-list .group-conversation {
+	margin-left: 25px;
 }
 
 .main-sidebar .memberships-list .conversation_memberhsip.has-unread-msg {
