--- a/assets/templates/pages/settings/notifications/NotificationsSection.html
+++ b/assets/templates/pages/settings/notifications/NotificationsSection.html
@@ -1,14 +1,15 @@
 <!-- Notifications section -->
 
-<!-- Web app section -->
 <div class="box box-primary">
     <div class="box-header with-border">
-        <h3 class="box-title">tr("Web application")</h3>
+        <h3 class="box-title">tr("Notifications")</h3>
     </div>
     <!-- /.box-header -->
     <!-- form start -->
     
     <div class="box-body">
+
+        <h4>tr("Web application")</h4>
 
         <p>tr("Note: These parameters applies only for the web version of the application!")</p>
 
@@ -17,24 +18,11 @@
                 <input name="allow_sounds" type="checkbox" v-model="allow_sounds"> tr("Allow sound for notifications")
             </label>
         </div>
-    </div>
-    <!-- /.box-body -->
-    
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary" @click="update">tr("Update")</button>
-    </div>
-</div>
+
+        <p>&nbsp;&nbsp;&nbsp;</p>
 
 
-<!-- Push notifications section -->
-<div class="box box-primary">
-    <div class="box-header with-border">
-        <h3 class="box-title">tr("Push notifications")</h3>
-    </div>
-    <!-- /.box-header -->
-    <!-- form start -->
-    
-    <div class="box-body">
+        <h4>tr("Push notifications")</h4>
         <p>tr("Note: These parameters applies only for the mobile version of the application!")</p>
         
         <div class="form-group">
