--- a/assets/templates/pages/groups/pages/presence.html
+++ b/assets/templates/pages/groups/pages/presence.html
@@ -7,6 +7,8 @@
             </div>
             <div class="box-body">
 
+                <p>tr("Double-click to add or remove days of presence")</p>
+
                 <div class="calendar"></div>
                 
             </div>
