Can remove events

--- a/assets/templates/pages/groups/pages/presence.html
+++ b/assets/templates/pages/groups/pages/presence.html
@@ -6,11 +6,9 @@
                 <h3 class="box-title">tr("Presence in Forez")</h3>
             </div>
             <div class="box-body">
-
-                <p>tr("Double-click to add or remove days of presence")</p>
-
                 <div class="calendar"></div>
                 
+                <p>tr("Tip: Double-click to add or remove days of presence")</p>
             </div>
         </div>
     </div>
